--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,153 @@
+/* Fonts */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
+
+/* Variables */
+
+:root {
+  --color-orange: #fd7e14;
+  --color-green: #198754;
+  --color-teal: #0085a1;
+  --color-cyan: #0dcaf0;
+  --color-white: #fff;
+  --color-gray: #6c757d;
+  --ff-primary: "Roboto", sans-serif;
+  --ff-secondary: "Open Sans", sans-serif;
+  --spacing: 0.25rem;
+  --radius: 0.5rem;
+}
+/* Global Styles */
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: var(--ff-secondary);
+  background: var(--color-white);
+  color: var(--color-gray);
+  line-height: 1.5;
+  font-size: 0.875rem;
+}
+ul {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+}
+img {
+  display: block;
+}
+h1,
+h4 {
+  font-family: var(--ff-primary);
+  letter-spacing: var(--spacing);
+  line-height: 1.25;
+  margin-bottom: 0.75rem;
+  text-transform: uppercase;
+}
+h1 {
+  font-size: 2rem;
+  padding-bottom: 20px;
+  text-align: center;
+}
+h4 {
+  font-size: 1rem;
+}
+p {
+  margin-bottom: 1.25rem;
+  color: var(--color-gray);
+}
+main {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.container {
+  padding: 2rem 0;
+}
+.hero-img {
+  width: 100%;
+  height: 500px;
+}
+.section-center {
+  margin: 40px auto;
+  display: flex;
+  gap: 3rem 2rem;
+  justify-items: center;
+}
+.section-footer {
+  width: 85%;
+  margin: 20px auto;
+  /* justify-items: center; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.blog-thumbnail {
+  object-fit: cover;
+  height: 200px;
+  border: 0.25rem solid var(--color-green);
+  border-radius: var(--radius);
+}
+.blog-info header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.5px dotted var(--color-green);
+}
+.blog-info h4 {
+  margin-bottom: 0.5rem;
+}
+.blog-text {
+  margin-bottom: 1rem;
+  padding-top: 1rem;
+}
+.read-more {
+  font-size: 12px;
+  color: var(--color-green);
+  display: inline-block;
+  border: 1px solid var(--color-green);
+  border-radius: var(--radius);
+  height: 40px;
+  min-width: 170px;
+  line-height: 40px;
+  text-align: center;
+}
+.blog-info > a:hover {
+  color: var(--color-green);
+  font-weight: 800;
+}
+.underline {
+  width: 95rem;
+  height: 0.25rem;
+  background: var(--color-green);
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer-sm {
+  padding: 20px 0;
+}
+.sm-icon {
+  margin: 20px;
+  text-align: center;
+}
+.sm-icon > a {
+  color: var(--color-orange);
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.sm-icon > a:hover {
+  color: var(--color-orange);
+  font-weight: 800;
+}
+.sm-icon > a > i {
+  font-size: 16px;
+  padding-right: 12px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media screen and (min-width: 1200px) {
+  .section-center {
+    width: 95vw;
+    grid-template-rows: 1fr 1fr;
+  }
+  .blog-thumbnail {
+    height: 150px;
+  }
 }
